<resources>
    <string name="app_name">Bitcoin Calculator</string>
    <string name="selling_price">Selling Price</string>
    <string name="buying_price">Buying Price</string>
    <string name="quantity">Quantity</string>
    <string name="profit">Profit</string>
    <string name="calculate">Calculate</string>
    <string name="hint_sp">Enter Selling Price in INR</string>
    <string name="hint_bp">Enter Buying Price in INR</string>
    <string name="hint_qty">Enter Quantity Price in INR</string>
    <string name="tax">Tax</string>
    <string name="netbanking">Bought with netbanking (2% extra)</string>
    <string name="koinex">Koinex</string>
    <string name="unocoin">Unocoin</string>
</resources>
