<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="me.nihalismail.bitcoincalculator.MainActivity">

    <TextView
        android:text="@string/selling_price"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/sellingPrice" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:hint="@string/hint_sp"
        android:inputType="number"
        android:ems="10"
        android:background="#e9e9e9"
        android:id="@+id/sellingPriceInput" />

    <TextView
        android:text="@string/buying_price"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buyingPrice" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:inputType="number"
        android:hint="@string/hint_bp"
        android:ems="10"
        android:textAlignment="center"
        android:background="#e9e9e9"
        android:id="@+id/buyingPriceInput" />

    <TextView
        android:text="@string/quantity"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/quantity" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:inputType="number"
        android:textAlignment="center"
        android:hint="@string/hint_qty"
        android:ems="10"
        android:background="#e9e9e9"
        android:id="@+id/quantityInput" />

    <TextView
        android:text="@string/profit"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/profit" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:padding="5dp"
        android:textColor="#000"
        android:textSize="20sp"
        android:textAlignment="center"
        android:background="#e9e9e9"
        android:id="@+id/profitInput" />



</LinearLayout>
